--- a/styles/base.css
+++ b/styles/base.css
@@ -54,11 +54,23 @@ nav a:hover {
 main {
 	display: grid;
 	grid-template-columns: 2fr 1fr;
+	max-width: 1024px;
+	margin: 0 auto;
+}
+
+footer {
+	text-align: center;
+	background-color: var(--primary-color);
+	color: white;
+}
+
+footer .highlight {
+	color: var(--accent1-color)
 }
 
 .card {
 	display: grid;
-	grid-template: 1fr 1fr / 1fr;
+	grid-template: 5em 1fr / 1fr;
 	align-content: center;
 	row-gap: 0;
 }
@@ -78,4 +90,47 @@ main {
 	margin: 0 1rem 1rem 1rem;
 	padding: 1rem;
 	border-radius: 0 0 10px 10px;
+	align-items: stretch;
+}
+
+.side-column {
+	display: grid;
+	grid-template-columns: auto 25%;
+	border: none;
+	margin: 0;
+	padding: 0;
+}
+
+.card .side-column img {
+	grid-row: 1 / 3;
+	grid-column: 2 / 3;
+}
+
+.side-column h3 {
+	text-align: center;
+}
+
+.side-column aside {
+	width: 30%;
+	padding-right: 1em;
+	float: left;
+	font-style: italic;
+	font-size: 0.8em;
+}
+
+.side-column img {
+	max-width: 100%;
+	/* height: auto; */
+	border: var(--secondary-color) 1px solid;
+}
+
+.dev-resource {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
+
+.dev-resource ul {
+	margin: 0 1em;
+	/* padding: 1em; */
 }
