CSS Adjustments for Temple Gallery

--- a/styles/temples.css
+++ b/styles/temples.css
@@ -1,5 +1,5 @@
 :root {
-    --primary-color: #fe5f55;
+    --primary-color: #b9362d;
     --secondary-color: #5f7272;
     --accent1-color: #eef5db;
     --accent2-color: #394444;
@@ -14,6 +14,8 @@
 header {
     background-color: var(--primary-color);
     position: relative;
+    color: var(--accent1-color);
+    padding: 0.5rem 1rem;
 }
 
 #menu {
@@ -70,6 +72,7 @@ main {
 }
 
 footer {
+    color: var(--accent1-color);
     background-color: var(--primary-color);
     padding: 1rem 0 0.25rem 0;
 }
