--- a/styles/temples-large.css
+++ b/styles/temples-large.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 800px) {
     h1 {
         text-align: left;
     }
@@ -7,6 +7,7 @@
         display: grid;
         grid-template-columns: fit-content(30%) 1fr;
         align-items: center;
+        padding: 0 1rem;
     }
 
     .navigation {
