--- a/project/styles/siteplan.css
+++ b/project/styles/siteplan.css
@@ -1,10 +1,29 @@
 :root {
     --primary-color: #85bb65;
     --secondary-color: #ffb74d;
+    --accent-color-1: #0c1909;
+    --accent-color-2: #3e1e1e;
+}
+
+* {
+    font-family: 'Merriweather Sans', sans-serif;
+}
+
+h1, h2 {
+    font-family: 'Ysabeau SC', 'Merriweather Sans', sans-serif;
+}
+
+h1 {
+    font-weight: 900;
 }
 
 header, footer {
     background-color: var(--primary-color);
+    color: var(--accent-color-1);
+}
+
+header, footer, main {
+    margin: 0 1rem;
 }
 
 header div {
@@ -15,6 +34,14 @@ header div {
 
 header div img {
     padding: 0 1rem;
+}
+
+h2 {
+    color: var(--accent-color-2);
+    background-color: var(--secondary-color);
+    width: 33%;
+    max-width: 20rem;
+    padding: 0.5rem 1rem;
 }
 
 .no-bullet {
@@ -35,14 +62,17 @@ header div img {
     width: 100px;
     height: 2rem;
     border: 1px solid #aaa;
-    /* padding: 10px; */
-    margin: 10px;
+    margin: 0 0 0 10px;
+    align-content: center;
+    text-align: center;
 }
 
 .primary {
     background-color: var(--primary-color);
+    color: var(--accent-color-1);
 }
 
 .secondary {
     background-color: var(--secondary-color);
+    color: var(--accent-color-2);
 }
