--- a/project/styles/budgeting.css
+++ b/project/styles/budgeting.css
@@ -9,17 +9,10 @@
     font-family: 'Merriweather Sans', sans-serif;
 }
 
-h1, h2 {
-    font-family: 'Ysabeau SC', 'Merriweather Sans', sans-serif;
-}
-
-h1 {
-    font-weight: 900;
-}
-
 header, footer {
     background-color: var(--primary-color);
     color: var(--accent-color-1);
+    padding: 0 1rem;
 }
 
 header, footer, main {
@@ -32,15 +25,95 @@ header div {
     align-items: center;
 }
 
-header div img {
-    padding: 0 1rem;
+.nav {
+    display: flex;
+    justify-content: space-between;
 }
 
-h2 {
+.nav-links{
+    display: flex;
+    justify-content: space-around;
+}
+
+.nav-links .active {
+    text-decoration: underline var(--secondary-color);
+    text-underline-offset: 5px;
+}
+
+.nav-links a {
+    padding: 5px 0.5rem;
+}
+
+.nav-links a:hover {
+    background-color: var(--secondary-color);
+    color: var(--accent-color-2);
+}
+
+footer {
+    display: grid;
+    grid-template-columns: auto auto;
+}
+
+.copyright {
+    padding: 0 1rem;
+    align-self: center;
+}
+
+.external-links {
+    display: flex;
+    justify-content: flex-end;
+}
+
+footer figure {
+    display:flex;
+    flex-direction: column;
+    align-items: baseline;
+    max-width: 125px;
+    text-align: center;
+}
+
+footer h3 {
+    align-self: center;
+}
+
+footer img {
+    max-width: 50px;
+    align-self: center;
+}
+
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+h1, h2 {
+    font-family: 'Ysabeau SC', 'Merriweather Sans', sans-serif;
+}
+
+h1 {
+    font-weight: 900;
+}
+
+main {
+    background-color: #85bb6540;
+    position: relative;
+    padding: 1rem;
+    padding-top: 0;
+}
+
+.page-title {
+    display: grid;
+    grid-template-columns: 2% 1fr;
+}
+
+main h2 {
+    grid-column: 2/3;
     color: var(--accent-color-2);
     background-color: var(--secondary-color);
-    width: 33%;
-    max-width: 20rem;
+    width: fit-content;
+    /* max-width: 20rem; */
+    min-width: 33%;
     padding: 0.5rem 1rem;
 }
 
@@ -75,4 +148,35 @@ h2 {
 .secondary {
     background-color: var(--secondary-color);
     color: var(--accent-color-2);
+}
+
+.budgeting-info {
+    display: flex;
+    flex-direction: column;
+}
+
+.budgeting-info .row {
+    display: flex;
+    justify-content: space-between;
+    background-color: #85bb6540;
+    margin: 1rem;
+    padding: 0.5rem;
+}
+
+.budgeting-info .row:nth-child(2n) {
+    flex-direction: row-reverse;
+}
+
+.budgeting-info .row p {
+    flex-grow: 3;
+    flex-basis: auto;
+    padding: 1rem;
+    align-self: center;
+}
+
+.budgeting-info .row img {
+    padding: 0.5rem;
+    width: 200px;
+    height: auto;
+    min-width: 200px;
 }
