--- a/project/styles/budgeting.css
+++ b/project/styles/budgeting.css
@@ -3,6 +3,7 @@
     --secondary-color: #ffb74d;
     --accent-color-1: #0c1909;
     --accent-color-2: #3e1e1e;
+    --background: #85bb6540;
 }
 
 * {
@@ -96,7 +97,7 @@ h1 {
 }
 
 main {
-    background-color: #85bb6540;
+    background-color: var(--background);
     position: relative;
     padding: 1rem;
     padding-top: 0;
@@ -158,7 +159,7 @@ main h2 {
 .budgeting-info .row {
     display: flex;
     justify-content: space-between;
-    background-color: #85bb6540;
+    background-color: var(--background);
     margin: 1rem;
     padding: 0.5rem;
 }
@@ -179,4 +180,41 @@ main h2 {
     width: 200px;
     height: auto;
     min-width: 200px;
+}
+
+th {
+    text-align: left;
+    background-color: var(--background);
+    color: var(--accent-color-1)
+}
+
+th:nth-child(odd) {
+    width: 45%;
+}
+
+th:nth-child(even) {
+    width: fit-content;
+}
+
+tbody td:nth-child(4) {
+    text-align: center;
+}
+
+tbody tr:nth-child(even)
+{
+    background-color: var(--background);
+}
+
+#category-table {
+    display: grid;
+    width: fit-content;
+    grid-template-columns: 1fr 1fr;
+    margin-top: 1rem;
+}
+
+#category-table div {
+    margin: 1px 1rem 1px 0;
+}
+#category-table div:nth-child(odd) {
+    font-weight: bold;
 }
